# cpp-practice

./: 1_Hello.cpp  README.md
10_PointersReferences/: CMakeLists.txt  Person.cpp  Person.h  Pointer_Reference_main.cpp
11_ManualMemManagement/: CMakeLists.txt  MemMain.cpp  Person.cpp  Person.h  Resource.h
11_const/: CMakeLists.txt  const_main.cpp
12_SmartPointers/: CMakeLists.txt  MemMain.cpp  Person.cpp  Person.h  Resource.cpp
2_Person/: Person.cpp  Person.h  Person_main.cpp
3_Inheritance/: CMakeLists.txt  Person.h  Person_main.cpp  Tweeple.cpp  Tweeple.h
4_EnumClass/: CMakeLists.txt  enum_main.cpp  status.h
5_ScopedSwitch/: CMakeLists.txt  Thing_main.cpp
6_OperatorOverload/: CMakeLists.txt  Person_main.cpp
7_TemplateFunctions/: CMakeLists.txt  Template_functions_main.cpp  Template_max.h
8_TemplateClass/: Accum.h  Accumulator.cpp  CMakeLists.txt
9_TemplateSpecialization/: Accum.h  Accumulator.cpp  CMakeLists.txt
